@@ -1246,6 +1246,18 @@ name|toString
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|child
+operator|.
+name|addChild
+argument_list|(
+name|tupleSource
+operator|.
+name|toExplanation
+argument_list|(
+name|factory
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|explanation
 operator|.
 name|addChild
